crates/cherry-pit-web/tests/compile_fail/build_router_mismatched_gateway.stderr
error[E0271]: type mismatch resolving `<R as CommandRouter>::Gateway == G1`
   --> tests/compile_fail/build_router_mismatched_gateway.rs:198:40
    |
198 |     let _state = AppState::new(G1, S1, R);
    |                  -------------         ^ type mismatch resolving `<R as CommandRouter>::Gateway == G1`
    |                  |
    |                  required by a bound introduced by this call
    |
note: expected this to be `G1`
   --> tests/compile_fail/build_router_mismatched_gateway.rs:182:20
    |
182 |     type Gateway = G2;
    |                    ^^
note: required by a bound in `AppState::<G, S, R>::new`
   --> src/state.rs
    |
    |     R: CommandRouter<Gateway = G> + Clone + Send + Sync + 'static,
    |                      ^^^^^^^^^^^ required by this bound in `AppState::<G, S, R>::new`
...
    |     pub fn new(gateway: G, store: S, router: R) -> Self {
    |            --- required by a bound in this associated function

error[E0271]: type mismatch resolving `<R as CommandRouter>::Gateway == G1`
   --> tests/compile_fail/build_router_mismatched_gateway.rs:198:18
    |
198 |     let _state = AppState::new(G1, S1, R);
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<R as CommandRouter>::Gateway == G1`
    |
note: expected this to be `G1`
   --> tests/compile_fail/build_router_mismatched_gateway.rs:182:20
    |
182 |     type Gateway = G2;
    |                    ^^
note: required by a bound in `AppState`
   --> src/state.rs
    |
    | pub struct AppState<G, S, R>
    |            -------- required by a bound in this struct
...
    |     R: CommandRouter<Gateway = G> + Clone + Send + Sync + 'static,
    |                      ^^^^^^^^^^^ required by this bound in `AppState`
